# idle-tui-adventures

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  todo.md
src/idle_tui_adventures/: __init__.py  __main__.py  app.py  config.py  constants.py  database.py  inventory.py  main_screen.py  positioning_testing.py  test_positioning.py  utils.py
src/idle_tui_adventures/classes/: character.py  characters.py  gamestates.py  items.py
src/idle_tui_adventures/database/: db_queries.py  db_transactions.py  db_utils.py
src/idle_tui_adventures/modes/main_menu/: character_screen.py  dungeon_screen.py  inventory_screen.py  main_screen.py  shop_screen.py
src/idle_tui_adventures/modes/settings_menu/: settings_screen.py
src/idle_tui_adventures/modes/start_menu/: load_character_screen.py  new_character_screen.py  start_screen.py
src/idle_tui_adventures/widgets/: custom_widgets.py  icon_widgets.py  inventory_screen_widgets.py  main_screen_widgets.py  modal_floating_screen.py  stat_point_widgets.py
tests/: conftest.py  test_app.py  test_config.py
tools/: make_test_db_entries.py
