[project]
name = "idle-tui-adventures"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Full Name", email = "email@address.invalid" }
]
dependencies = [
    "textual>=0.74.0",
    "platformdirs>=4.2.2",
    "rich-pixels>=3.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
idle = "idle_tui_adventures.__main__:run"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "textual-dev>=1.5.1",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.8",
    "pytest-xdist>=3.6.1",
]
[tool.pytest.ini_options]
addopts = "-n 4 --dist=loadgroup --cov idle_tui_adventures --cov-report term-missing --verbose"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/idle_tui_adventures"]
